--- a/Topten.RichTextKit.Test/Topten.RichTextKit.Test.csproj
+++ b/Topten.RichTextKit.Test/Topten.RichTextKit.Test.csproj
@@ -5,6 +5,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <IsPackable>false</IsPackable>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
